# fullerene

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  dependency-duplicates.toml  linker.ld  push.yml  rust-toolchain.toml  x86_64-uefi.json  x86_64-unknown-none.json
bellows/: Cargo.toml  build.rs
bellows/.cargo/: config.toml
bellows/src/: lib.rs  main.rs  uefi.rs
bellows/src/loader/: debug.rs  file.rs  heap.rs  mod.rs  pe.rs  serial.rs  trampoline.rs
bonder/: Cargo.toml
bonder/src/: dhcp.rs  ethernet.rs  ipv4.rs  lib.rs  logger.rs  main.rs  udp.rs  wifi.rs  wpa.rs
carrier/: Cargo.toml
carrier/src/: exec.rs  lib.rs  pipeline.rs  terminal.rs
flasks/: Cargo.toml
flasks/ovmf/: README.md  RELEASEX64_OVMF_CODE.fd  RELEASEX64_OVMF_VARS.fd
flasks/src/: disk.rs  lib.rs  main.rs  part_io.rs
flasks/support/: matrix.toml
flasks/tests/: unit_tests.rs
flasks/tools/: Cargo.toml
flasks/tools/src/: lib.rs
fullerene-kernel/: Cargo.toml  build.rs
fullerene-kernel/.cargo/: config.toml
fullerene-kernel/abi/: Cargo.toml
fullerene-kernel/abi/src/: lib.rs
fullerene-kernel/src/: ahci.rs  app_runner.rs  badapple.rs  boot.rs  boot_stage.rs  context_switch.rs  ctx.rs  devfs.rs  display.rs  driver_context_impl.rs  errors.rs  font.rs  font.txt  fs.rs  gdt.rs  graphics.rs  gui.rs  heap.rs  init.rs  initializer.rs  initramfs.rs  interrupts.rs  keyboard.rs  klog.rs  lib.rs  loader.rs  logging.rs  macros.rs  main.rs  memory.rs  memory_management.rs  metrics.rs  mod.rs  nvme.rs  operations.rs  plugin.rs  ports.rs  process.rs  scheduler.rs  scheduler_context.rs  (+19 more)
fullerene-kernel/src/apps/: mod.rs
fullerene-kernel/src/boot/: bios_entry.rs  constants.rs  macros.rs  mod.rs  paging.rs  uefi_entry.rs  uefi_init.rs  uefi_main.rs  utils.rs
fullerene-kernel/src/contexts/: audio.rs  boot.rs  device.rs  display.rs  event.rs  framebuffer.rs  gui.rs  input.rs  interrupt.rs  kernel.rs  macros.rs  memory.rs  mod.rs  pci.rs  process.rs  settings.rs  settings_persist.rs  shell.rs  vfs.rs  window.rs
fullerene-kernel/src/drivers/: ahci.rs  exfat.rs  fat.rs  mod.rs  nvme.rs  registry.rs  sd_card.rs  usb_storage.rs  virtio_gpu.rs
fullerene-kernel/src/graphics/: color.rs  desktop.rs  discovery.rs  framebuffer.rs  mod.rs  text.rs  vga_device.rs
fullerene-kernel/src/hardware/: device_manager.rs  driver_manager.rs  mod.rs  pci.rs  pci_allocator.rs  ports.rs
fullerene-kernel/src/heap/: allocator.rs  memory_map.rs  mod.rs  paging.rs
fullerene-kernel/src/interrupts/: apic.rs  exceptions.rs  idt.rs  input.rs  mod.rs  pic.rs  syscall.rs
fullerene-kernel/src/linux/: fs.rs  launch.rs  memory.rs  misc.rs  mod.rs  numbers.rs  process.rs  runtime.rs  signal.rs  test_binary.rs  time.rs  types.rs
fullerene-kernel/src/memory_management/: convenience.rs  frame_allocator.rs  kernel_space.rs  manager.rs  mod.rs  page_table.rs  process_memory.rs  user_space.rs
fullerene-kernel/src/process/: mod.rs  types.rs
fullerene-kernel/src/syscall/: abi.rs  basic.rs  cap.rs  device.rs  dispatch.rs  event.rs  fs.rs  handlers.rs  interface.rs  ipc.rs  memory.rs  mod.rs  process.rs  thread.rs  time.rs  types.rs  user.rs  window.rs
fullerene-kernel/src/traits/: mod.rs
fullerene-kernel/src/types/: mod.rs
fullerene-kernel/src/vga/: buffer.rs  mod.rs  ops.rs  tests.rs
fullerene-kernel/vdso/src/: lib.rs
genome/: Cargo.toml
genome/src/: block.rs  fs.rs  io.rs  kind.rs  lib.rs  vfs.rs
genome/src/fat/: block_device.rs  cache.rs  exfat.rs  fat32.rs  mod.rs  partition.rs
gui/: Cargo.toml  pyproject.toml
gui/src/: bevy_tutorial.rs  bevy_world.rs  camera.rs  crate.rs  crate1.rs  lang.rs  lib.rs  lib_helloworld.rs  main.rs  main_copy.rs  rotate.rs  shooting.rs  tour1.rs  tour2.rs  tour4.rs  tour5.rs  tour7.rs
lattice/: Cargo.toml  build.rs
lattice/examples/: render_ppm.rs
lattice/src/: compositor.rs  cursor.rs  desktop.rs  desktop_icons.rs  editor.rs  font.rs  icon.rs  lib.rs  menu.rs  network_menu.rs  painter.rs  renderer.rs  scene.rs  shell_overlay.rs  surface.rs  taskbar.rs  terminal_surface.rs  theme.rs  top_panel.rs  wallpaper.rs  window.rs  wm.rs
lattice/src/compositor/: mod.rs
lattice/tests/: integration_test.rs
nitrogen/: .driverignore  Cargo.toml  build.rs
nitrogen/src/: apic.rs  apic_controller.rs  audio.rs  debug.rs  driver_api.rs  driver_context.rs  error.rs  framebuffer.rs  ioapic.rs  iwlwifi.rs  lib.rs  metrics.rs  mmio.rs  pci.rs  pci_error.rs  pci_health.rs  pic.rs  port.rs  timing.rs  wifi.rs  xhci_dbc.rs
nitrogen/src/acpi/: dmar.rs  madt.rs  manager.rs  mcfg.rs  mod.rs
nitrogen/src/hda/: codec.rs  controller.rs  corb.rs  diagnostics.rs  dma.rs  mod.rs  route.rs
nitrogen/src/iommu/: acpi.rs  mod.rs  table.rs  vtd.rs
nitrogen/src/iwlwifi/: connection_state.rs  device.rs  firmware.rs  io.rs  mod.rs  rx.rs  (+4 more)
nozzle/: Cargo.toml
nozzle/src/: builtins.rs  exec.rs  fs_hooks.rs  lib.rs  line_editor.rs  parser.rs  prompt.rs  selection.rs  sys_hooks.rs  terminal.rs  terminal_buffer.rs
petroleum/: Cargo.toml
petroleum/src/: apic.rs  assembly.rs  bare_metal_graphics_detection.rs  bare_metal_pci.rs  boot.rs  common.rs  debug.rs  error.rs  filesystem.rs  graphics.rs  graphics_alternatives.rs  hardware.rs  initializer.rs  lib.rs  page_table.rs  serial.rs  transition.rs  uefi_helpers.rs  vga_debug.rs
petroleum/tests/: lib.rs
resonance/: Cargo.toml
resonance/src/: dispatcher.rs  event.rs  handler.rs  lib.rs  queue.rs  scancode.rs  source.rs  tracing.rs
solvent/: Cargo.toml  build.rs
solvent/src/: callbacks.rs  clock.rs  editor_bridge.rs  event_loop.rs  explorer.rs  file.rs  handlers.rs  input_loop.rs  lib.rs  menu_actions.rs  network_manager.rs  render.rs  runtime_context.rs  services.rs  settings_bridge.rs  terminal.rs  viewers.rs  window_api.rs
solvent/wasi/: Cargo.toml
toluene/: Cargo.toml
toluene/apps/: hello_wasi.rs
toluene/rle_player/: Cargo.toml
toluene/src/: app.rs  calc.rs  clock.rs  exec.rs  lib.rs  main.rs  sys.rs  ui.rs  user.rs
toluene/tests/: unit_tests.rs
wasi_runtime/: Cargo.toml
wasi_runtime/src/: lib.rs  runtime.rs  wasi.rs
(+241 files in other folders)
