[workspace]
resolver = "3"
members = ["bellows", "bonder", "chronoline", "flasks", "fullerene-kernel", "lattice", "nitrogen", "nozzle", "petroleum", "resonance", "solvent", "toluene"]

[profile.dev]
panic = "abort"
overflow-checks = true

[profile.release]
panic = "abort"
opt-level = 3
lto = true
codegen-units = 1

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["p14c31355"]
