[workspace]
resolver = "3"
members = ["bellows", "bonder", "carrier", "chronoline", "flasks", "fullerene-abi", "fullerene-kernel", "genome", "lattice", "nitrogen", "nozzle", "petroleum", "resonance", "solvent", "toluene", "toluene/rle_player", "vdso", "wasi_runtime"]
default-members = ["bonder", "chronoline", "flasks", "fullerene-abi", "fullerene-kernel", "lattice", "nitrogen", "nozzle", "petroleum", "resonance", "solvent", "toluene", "toluene/rle_player"]

[profile.dev]
panic = "abort"
overflow-checks = true

[profile.release]
panic = "abort"
opt-level = 3
lto = true
codegen-units = 1

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["p14c31355"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# lattice uses 0.12; most crates still on 0.10 (MutexGuard added R generic in 0.12)
spin = { version = "0.12", default-features = false }
x86_64 = { version = "0.15", default-features = false }
volatile = { version = "0.6", default-features = false }
log = { version = "0.4", default-features = false }
bitflags = { version = "2", default-features = false }
embedded-graphics = { version = "0.8", default-features = false }
pc-keyboard = { version = "0.8", default-features = false }
goblin = { version = "0.10", default-features = false }
