[workspace]
resolver = "3"
members = ["bellows", "bonder", "carrier", "chronoline", "flasks", "flasks/tools", "fullerene-kernel", "fullerene-kernel/abi", "fullerene-kernel/vdso", "genome", "lattice", "nitrogen", "nozzle", "petroleum", "resonance", "solvent", "solvent/wasi", "toluene", "toluene/rle_player"]
default-members = ["bonder", "chronoline", "flasks", "fullerene-kernel", "fullerene-kernel/abi", "lattice", "nitrogen", "nozzle", "petroleum", "resonance", "solvent", "toluene", "toluene/rle_player"]

[profile.dev]
panic = "abort"
overflow-checks = true

[profile.release]
panic = "abort"
opt-level = 3
lto = true
codegen-units = 1

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["p14c31355"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/p14c31355/fullerene"
rust-version = "1.85"

[workspace.dependencies]
spin = { version = "0.12", default-features = false }
x86_64 = { version = "0.15", default-features = false }
volatile = { version = "0.6", default-features = false }
log = { version = "0.4", default-features = false }
bitflags = { version = "2", default-features = false }
embedded-graphics = { version = "0.8", default-features = false }
pc-keyboard = { version = "0.8", default-features = false }
goblin = { version = "0.10", default-features = false }
