[package]
name = "bellows"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bellows"
path = "src/main.rs"

[features]
debug_loader = []

[dependencies]
linked_list_allocator = "0.10.6"
spin = "0.10.0"
petroleum = { path = "../petroleum" }
x86_64 = { version = "0.15.4", default-features = false, features = ["instructions"] }
log = { version = "0.4.29", default-features = false }
