[package]
name = "bellows"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bellows"
path = "src/main.rs"
test = false
bench = false

[features]
debug_loader = []

[dependencies]
linked_list_allocator = "0.10.6"
# Using spin 0.10 instead of workspace 0.12 — 0.12 changed MutexGuard API (added R generic)
spin = { version = "0.10.0", default-features = false, features = ["mutex", "spin_mutex"] }
petroleum = { path = "../petroleum" }
x86_64 = { workspace = true, features = ["instructions"] }
log = { workspace = true }
