[package]
name = "bellows"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "bellows"
path = "src/main.rs"
test = false
bench = false

[features]
debug_loader = []

[dependencies]
linked_list_allocator = "0.10.6"
spin = { workspace = true, features = ["mutex", "spin_mutex"] }
petroleum = { path = "../petroleum" }
x86_64 = { workspace = true, features = ["instructions"] }
log = { workspace = true }
