[package]
name = "bonder"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "A no_std network protocol stack for bare-metal / kernel development"
documentation = "https://github.com/p14c31355/fullerene"
keywords = ["no-std", "networking", "ethernet", "ipv4", "kernel"]
categories = ["embedded", "network", "no-std", "os"]

[dependencies]
log = { workspace = true }
spin = { workspace = true, features = ["spin_mutex"] }

[lib]
name = "bonder"
path = "src/lib.rs"

[[bin]]
name = "bonder"
path = "src/main.rs"

[package.metadata.docs.rs]
features = ["std"]
