[package]
name = "carrier"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
spin = { workspace = true, features = ["mutex", "spin_mutex"] }

[lib]
name = "carrier"
path = "src/lib.rs"
