[package]
name = "flasks"
version = "0.1.0"
edition = "2024"

[lib]
name = "flasks"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "flasks"
path = "src/main.rs"

[dependencies]
isobemak = { path = "../../isobemak" } # develop
tempfile = "3.27.0"
clap = { version = "4.6.1", features = ["derive"] }
log = { version = "0.4.28", default-features = false }
env_logger = "0.11.10"

# Replace crates.io isobemak with a local checkout for development.
# Remove this section (or comment out the patch) before publishing.
[patch.crates-io]
isobemak = "0.3.3"