[package]
name = "flasks"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "flasks"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "flasks"
path = "src/main.rs"

[dependencies]
isobemak = "0.4.1"
tempfile = "3.27.0"
clap = { version = "4.6.1", features = ["derive"] }
log = { workspace = true }
env_logger = "0.11.10"
