# fullerene-kernel/Cargo.toml
[package]
name = "fullerene-kernel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fullerene-kernel"
path = "src/main.rs"

[lib]
name = "fullerene_kernel"
path = "src/lib.rs"

[dependencies]
x86_64 = { version = "0.15.2", default-features = false, features = [
  "instructions",
  "abi_x86_interrupt",
] }
spin = { version = "0.10.0", default-features = false, features = [
  "once",
  "mutex",
  "spin_mutex",
] }
lazy_static = { version = "1.5.0", default-features = false, features = [
  "spin_no_std",
] }

petroleum = { path = "../petroleum" }
embedded-graphics = { version = "0.8", default-features = false }
memoffset = { version = "0.9", default-features = false }
linked_list_allocator = { version = "0.10", default-features = false, features = ["alloc_ref"] }
goblin = { version = "0.10.2", default-features = false, features = ["elf32", "elf64", "endian_fd"] }
bitfield = { version = "0.19.3", default-features = false }
static_assertions = { version = "1.1", default-features = false }
bitflags = { version = "2.4", default-features = false }
volatile = { version = "0.6", default-features = false }
pc-keyboard = { version = "0.8.0", default-features = false }
log = { version = "0.4.28", default-features = false }
# shell-words = "1.1"  # Cannot use in no_std kernel

[features]
default = []
user_space = []

[profile.dev]
debug = true
split-debuginfo = "packed"
panic = "abort"

[profile.release]
debug = true
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = true
