# fullerene-kernel/Cargo.toml
[package]
name = "fullerene-kernel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fullerene-kernel"
path = "src/main.rs"

[dependencies]
x86_64 = { workspace = true, features = [
  "instructions",
  "abi_x86_interrupt",
] }
# Using spin 0.10 instead of workspace 0.12 — 0.12 changed MutexGuard API (added R generic)
spin = { version = "0.10.0", default-features = false, features = [
  "once",
  "mutex",
  "spin_mutex",
] }
fullerene-abi = { path = "../fullerene-abi" }
genome = { path = "../genome" }
petroleum = { path = "../petroleum" }
nitrogen = { path = "../nitrogen" }
nozzle = { path = "../nozzle" }
bonder = { path = "../bonder" }
lattice = { path = "../lattice" }
solvent = { path = "../solvent" }
resonance = { path = "../resonance" }
rle_player = { path = "../toluene/rle_player" }
embedded-graphics = { workspace = true }
memoffset = { version = "0.9", default-features = false }
linked_list_allocator = { version = "0.10.6", default-features = false, features = [
  "alloc_ref",
] }
goblin = { workspace = true, features = [
  "elf32",
  "elf64",
  "endian_fd",
] }
bitfield = { version = "0.19.3", default-features = false }
static_assertions = { version = "1.1", default-features = false }
bitflags = { workspace = true, default-features = false }
volatile = { workspace = true }
pc-keyboard = { workspace = true }
heapless = { version = "0.9.2", default-features = false }
paste = "1.0.15"
log = { workspace = true }
wasi_runtime = { path = "../wasi_runtime" }
fatfs = { package = "starry-fatfs", version = "0.4.1-preview.2", default-features = false, features = ["alloc", "lfn", "unicode"] }
hadris-fat = { version = "1.2.1", default-features = false, features = [
  "alloc",
  "exfat",
  "read",
  "sync",
  "write",
] }
# shell-words = "1.1"  # Cannot use in no_std kernel

[features]
default = []
user_space = []

[dev-dependencies]
petroleum = { path = "../petroleum", features = ["std"] }
