[package]
name = "genome"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
spin = { workspace = true, features = [
  "mutex",
  "spin_mutex",
] }
log = { workspace = true }
fatfs = { workspace = true, features = ["alloc", "lfn", "unicode"] }
hadris-fat = { workspace = true, features = [
  "alloc",
  "exfat",
  "read",
  "sync",
  "write",
] }

[lib]
name = "genome"
path = "src/lib.rs"
