[package]
name = "gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "I_will_Rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = "0.16.1"
build-deps = "0.1.4"
clippy = "0.0.302"
rust-analyzer = "0.0.1"
jpeg-encoder = "0.6.0"
rayon = "1.10.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
pyo3 = "0.25.1"
nalgebra = "0.33.2"

ruduino = "0.3.2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
