[package]
name = "nitrogen"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
x86_64 = { workspace = true, features = [
  "instructions",
] }
spin = { workspace = true, features = [
  "once",
  "spin_mutex",
] }
log = { workspace = true }
bonder = { path = "../bonder" }

[lib]
name = "nitrogen"
path = "src/lib.rs"
crate-type = ["lib"]
