[package]
name = "nozzle"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
carrier = { path = "../carrier" }
spin = { workspace = true, features = ["mutex", "spin_mutex"] }

[lib]
name = "nozzle"
path = "src/lib.rs"
crate-type = ["lib"]
