[package]
name = "petroleum"
version = "0.1.0"
edition = "2024"

[features]
default = []
std = []
vga_panic = []

[dependencies]
spin = { version = "0.10.0", default-features = false, features = [
  "once",
  "mutex",
  "spin_mutex",
] }
x86_64 = { version = "0.15.2", default-features = false, features = [
  "instructions",
  "abi_x86_interrupt",
] }
linked_list_allocator = "0.10"
once_cell = { version = "1.19", default-features = false, features = ["alloc", "race"] }
embedded-graphics = "0.8.1"
volatile = "0.6"
heapless = { version = "0.8", default-features = false }
bitflags = "2.4"
conquer-util = { version = "0.3", default-features = false }
static_assertions = "1.1"
log = { version = "0.4.28", default-features = false }

[lib]
name = "petroleum"
path = "src/lib.rs"
crate-type = ["lib"]
