[package]
name = "petroleum"
version = "0.1.0"
edition = "2024"

[features]
default = []
std = []
vga_panic = []

[dependencies]
spin = { version = "0.10.0", default-features = false, features = [
  "once",
  "mutex",
  "spin_mutex",
] }
x86_64 = { version = "0.15.2", default-features = false, features = [
  "instructions",
  "abi_x86_interrupt",
] }
linked_list_allocator = "0.10"
once_cell = { version = "1.19", default-features = false, features = ["alloc", "race"] }
embedded-graphics = { version = "0.8.1", default-features = false }
volatile = "0.6"
heapless = { version = "0.9.2", default-features = false }
bitflags = "2.4"
conquer-util = { version = "0.3", default-features = false }
static_assertions = "1.1"
log = { version = "0.4.29", default-features = false }
paste = "1.0"
bitfield = "0.19"
addr2line = { version = "0.26.1", default-features = false }
gimli = { version = "0.33.0", default-features = false }
goblin = { version = "0.10.5", default-features = false, features = ["pe32", "pe64"] }

[lib]
name = "petroleum"
path = "src/lib.rs"
crate-type = ["lib"]

[profile.dev]
force-frame-pointers = true

[profile.release]
force-frame-pointers = true

[dev-dependencies]
toluene = { path = "../toluene" }
