[package]
name = "petroleum"
version = "0.1.0"
edition = "2024"

[features]
default = []
std = []
vga_panic = []
debug_pf = []

[dependencies]
# Using spin 0.10 instead of workspace 0.12 — 0.12 changed MutexGuard API (added R generic)
spin = { version = "0.10.0", default-features = false, features = [
  "once",
  "mutex",
  "spin_mutex",
] }
x86_64 = { workspace = true, features = [
  "instructions",
  "abi_x86_interrupt",
] }
linked_list_allocator = "0.10"
once_cell = { version = "1.19", default-features = false, features = ["alloc", "race"] }
embedded-graphics = { workspace = true }
volatile = { workspace = true }
heapless = { version = "0.9.2", default-features = false }
bitflags = { workspace = true }
log = { workspace = true }
conquer-util = { version = "0.3", default-features = false }
static_assertions = "1.1"
paste = "1.0"
bitfield = "0.19"
addr2line = { version = "0.26.1", default-features = false }
gimli = { version = "0.33.0", default-features = false }
goblin = { workspace = true, features = ["pe32", "pe64"] }
embassy-futures = { version = "0.1", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }

[lib]
name = "petroleum"
path = "src/lib.rs"
crate-type = ["lib"]

[[test]]
name = "lib"
path = "tests/lib.rs"
required-features = ["std"]
