[package]
name = "solvent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
x86_64 = { workspace = true, features = [
  "instructions",
] }
# Using spin 0.10 instead of workspace 0.12 — 0.12 changed MutexGuard API (added R generic)
spin = { version = "0.10.0", default-features = false, features = [
  "once",
  "mutex",
  "spin_mutex",
] }
bonder = { path = "../bonder" }
petroleum = { path = "../petroleum" }
nitrogen = { path = "../nitrogen" }
carrier = { path = "../carrier" }
nozzle = { path = "../nozzle" }
lattice = { path = "../lattice" }
resonance = { path = "../resonance" }
chronoline = { path = "../chronoline" }
log = { workspace = true }

# Media format parsers
tinybmp = { version = "0.7", default-features = false, optional = true }
minipng = { version = "1", default-features = false, optional = true }
pure_wav = { version = "2", default-features = false, optional = true }
rmp3 = { version = "0.3", default-features = false, optional = true }
shiguredo_mp4 = { version = "2026.3", default-features = false, optional = true }
rust_h264 = { version = "0.4", default-features = false, optional = true }

[features]
default = ["tinybmp", "minipng", "pure_wav"]
tinybmp = ["dep:tinybmp"]
minipng = ["dep:minipng"]
pure_wav = ["dep:pure_wav"]
rmp3 = ["dep:rmp3"]

[lib]
name = "solvent"
path = "src/lib.rs"

[dev-dependencies]
petroleum = { path = "../petroleum", features = ["std"] }
