[package]
name = "solvent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
x86_64 = { workspace = true, features = [
  "instructions",
] }
# Using spin 0.10 instead of workspace 0.12 — 0.12 changed MutexGuard API (added R generic)
spin = { version = "0.10.0", default-features = false, features = [
  "once",
  "mutex",
  "spin_mutex",
] }
bonder = { path = "../bonder" }
petroleum = { path = "../petroleum" }
nitrogen = { path = "../nitrogen" }
carrier = { path = "../carrier" }
nozzle = { path = "../nozzle" }
lattice = { path = "../lattice" }
resonance = { path = "../resonance" }
chronoline = { path = "../chronoline" }
genome = { path = "../genome" }
log = { workspace = true }

# Media format parsers
tinybmp = { version = "0.7", default-features = false, optional = true }
minipng = { version = "1", default-features = false, optional = true }
pure_wav = { version = "2", default-features = false, optional = true }
shiguredo_mp4 = { version = "2026.3", default-features = false, optional = true }
rust_h264 = { version = "0.4", default-features = false, optional = true }
zune-jpeg = { version = "0.5", default-features = false, optional = true }
zune-core = { version = "0.5", default-features = false, optional = true }
miniz_oxide = { version = "0.8", default-features = false, features = ["with-alloc"], optional = true }

[features]
default = [
  "tinybmp",
  "minipng",
  "pure_wav",
  "shiguredo_mp4",
  "zune-jpeg",
  "gzip",
]
tinybmp = ["dep:tinybmp"]
minipng = ["dep:minipng"]
pure_wav = ["dep:pure_wav"]
shiguredo_mp4 = ["dep:shiguredo_mp4", "dep:rust_h264"]
zune-jpeg = ["dep:zune-jpeg", "dep:zune-core"]
gzip = ["dep:miniz_oxide"]

[lib]
name = "solvent"
path = "src/lib.rs"

[dev-dependencies]
petroleum = { path = "../petroleum", features = ["std"] }
