[package]
name = "toluene"
version = "0.1.0"
edition = "2024"

[lib]
name = "toluene"
path = "src/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "toluene"
path = "src/main.rs"

[[test]]
name = "unit_tests"
path = "tests/unit_tests.rs"
required-features = ["test"]

[features]
default = ["vfs", "kernel-syscall"]
binary = []
test = []
vfs = []
kernel-syscall = []

[dependencies]
clap = { version = "4", features = ["derive"] }
lattice = { path = "../lattice" }
petroleum = { path = "../petroleum" }

[[bin]]
name = "soxhlet"
path = "src/soxhlet/main.rs"
