[package]
name = "toluene"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "toluene"
path = "src/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "toluene"
path = "src/main.rs"
test = false
bench = false

[features]
default = ["vfs", "kernel-syscall"]
binary = []
test = []
vfs = []
kernel-syscall = []

[dependencies]
clap = { version = "4", features = ["derive"] }
fullerene-abi = { path = "../fullerene-kernel/abi" }
lattice = { path = "../lattice" }
petroleum = { path = "../petroleum" }

[dev-dependencies]
petroleum = { path = "../petroleum", features = ["std"] }

[[bin]]
name = "soxhlet"
path = "src/soxhlet/main.rs"
test = false
bench = false
