[package]
name = "wasi_runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
wasmi = { version = "0.33", default-features = false }
carrier = { path = "../carrier" }
genome = { path = "../genome" }

[lib]
name = "wasi_runtime"
path = "src/lib.rs"
crate-type = ["lib"]
